2011-05-04  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_seg2label_stats.m: v0.3.0

	- SCINRRD_SEG2LABEL_STATS Shape stats for each object in a
	multi-label segmentation; objects can be straightened with an
	skeleton or medial line before computing the stats.

	* Delete FiltersToolbox/landlocked_stats.m:

	- Move its functionality to
	FiltersToolbox/scinrrd_seg2label_stats.m to avoid having different
	functions that do similar things.

2011-05-03  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/scinrrd_squeeze.m: v0.1.2

	- Don't remove dimension from nrrd.axis if it's not a dummy
	dimension.

2011-04-29  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m: v0.4.0

	- Replace slow Dijkstra-based labelling of the whole image by new
	very fast region grow algorithm bwregiongrow().

	* FiltersToolbox/bwregiongrow.m: v0.2.0

	- Remove all Matlab code, that was very slow and inefficient. This
	function is now fully implemented in C++ in the corresponding MEX
	function, that is very fast.

	* FiltersToolbox/bwregiongrow.cpp: v0.2.1

	- Add input argument maxiter, to limit the number of grow
	iterations of the algorithm.

	* FiltersToolbox/CMakeLists.txt:

	- Rename FiltersToolbox/bwregiongrow_aux.cpp as
	FiltersToolbox/bwregiongrow.cpp.

	* Rename FiltersToolbox/bwregiongrow_aux.cpp as
	FiltersToolbox/bwregiongrow.cpp.

	* FiltersToolbox/bwregiongrow_aux.cpp: v0.2.0

	- Complete rewrite of the function. Now instead of implementing
	only a loop of the Matlab function, it implements the whole region
	grow algorithm. We don't need to use a distance matrix, and the
	algorithm is super fast (6 sec with the right.mha image that
	would've probably taken over 35 min with the Dijkstra Matlab
	method, and a lot more with the region grow implemented in Matlab).

2011-04-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/bwregiongrow.m:
